--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/rikuji/clean-node-api/issues"
   },
-  "homepage": "https://github.com/rikuji/clean-node-api#readme"
+  "homepage": "https://github.com/rikuji/clean-node-api#readme",
+  "devDependencies": {
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.9"
+  }
 }
